# OpenCarma

./: .gitignore  .gitmodules  BRenderLib.sln  CMakeLists.txt  README.md  brender spec.txt  brender.txt  carma.sln
ActorDump/: ActorDump.vcxproj  main.cpp
BRenderLib/: Actor.cpp  Actor.h  BRenderLib.sln  BRenderLib.vcxproj  BRenderLib.vcxproj.filters  BigEndianStreamReader.cpp  BigEndianStreamReader.h  CMakeLists.txt  Chunk.cpp  Chunk.h  Common.h  EndianConverter.cpp  EndianConverter.h  EndianStreamReader.cpp  EndianStreamReader.h  Exception.h  Material.cpp  Material.h  Model.cpp  Model.h  Object.cpp  Object.h  ObjectFactory.cpp  ObjectFactory.h  Palette.cpp  Palette.h  Pixmap.cpp  Pixmap.h  ReadMe.txt  Shadetab.cpp  Shadetab.h  TWTFile.cpp  TWTFile.h  TextDecoder.cpp
BRenderLib/Objects/: Actor.cpp  Actor.h  ChunkHeader.cpp  ChunkHeader.h  Material.cpp  Material.h  Model.cpp  Model.h  Palette.cpp  Palette.h  Pixmap.cpp  Pixmap.h  Shadetab.cpp  Shadetab.h
BRenderLib/Serialization/: ActorSerializer.cpp  ActorSerializer.h  ChunkHeader.cpp  ChunkHeader.h  ChunkReader.cpp  ChunkReader.h  ChunkWriter.cpp  ChunkWriter.h  MaterialSerializer.cpp  MaterialSerializer.h  ModelSerializer.cpp  ModelSerializer.h  PaletteSerializer.cpp  PaletteSerializer.h  PixmapSerializer.cpp  PixmapSerializer.h  TextureSerializer.cpp  TextureSerializer.h
BRenderTest/: BRenderTest.vcxproj  BRenderTest.vcxproj.filters  CMakeLists.txt  main.cpp
Common/: TextDecoder.cpp  TextDecoder.h
OpenCarma/: AxisDrawable.cpp  AxisDrawable.h  Camera.cpp  Camera.h  CarmaTextureLoader.cpp  CarmaTextureLoader.h  Exception.h  Filesystem.cpp  Filesystem.h  FreeFlyCameraController.cpp  FreeFlyCameraController.h  Init.cpp  Init.h  Log.cpp  Log.h  Logger.h  OpenCarma.vcxproj  OpenCarma.vcxproj.filters  OpponentDescription.cpp  OpponentDescription.h  RaceDescription.cpp  RaceDescription.h  Render.cpp  Render.h  RenderCommon.h  RenderMaterial.cpp  RenderMaterial.h  RenderNode.cpp  RenderNode.h  Scene.cpp  Scene.h  Shader.cpp  Shader.h  ShaderProgram.cpp  ShaderProgram.h  StaticModel.cpp  StaticModel.h  TextReader.cpp  TextReader.h  Texture.cpp  (+4 more)
OpenCarma/Render/: ActorMgr.cpp  ActorMgr.h  AxisDrawable.cpp  AxisDrawable.h  CarmaTextureLoader.cpp  CarmaTextureLoader.h  FreeFlyCameraController.cpp  FreeFlyCameraController.h  Material.cpp  Material.h  MaterialMgr.cpp  MaterialMgr.h  ModelMgr.cpp  ModelMgr.h  PlainShaderProgram.cpp  PlainShaderProgram.h  Render.cpp  Render.h  RenderMaterial.cpp  RenderMaterial.h  ResourceMgr.h  ShadetabMgr.cpp  ShadetabMgr.h  StaticModel.cpp  StaticModel.h  TextureManager.cpp  TextureManager.h  TextureMgr.cpp  TextureMgr.h
OpenCarma/Sound/: SoundMgr.cpp  SoundMgr.h
OpenCarma/TextFiles/: OpponentTxt.cpp  OpponentTxt.h  PedestrnTxt.cpp  PedestrnTxt.h  RaceTxt.cpp  RaceTxt.h  SoundTxt.cpp  SoundTxt.h  TextReader.cpp  TextReader.h
TextDecoder/: CMakeLists.txt  TextDecoder.vcxproj  TextDecoder.vcxproj.filters  main.cpp
TextLib/: TextDecoder.cpp  TextLib.vcxproj  TextLib.vcxproj.filters
cmake/modules/: FindGLM.cmake
